--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DRIZZLE_DATABASE_URL="postgres://username:password@localhost:5432/qwikx"
+DRIZZLE_DATABASE_URL="postgres://default:dc2YZujATX4k@ep-rough-tree-09327034.us-east-1.postgres.vercel-storage.com:5432/verceldb"
 JWT_SECRET="itssecret"
